--- a/dag-kit/infra/src/tsconfig.json
+++ b/dag-kit/infra/src/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "typescript-template/base.json",
+  // "extends": "typescript-template/base.json",
   "compilerOptions": {
     "jsx": "preserve"
   }
