--- a/dag-kit/plugingen/tsconfig.build.json
+++ b/dag-kit/plugingen/tsconfig.build.json
@@ -1,16 +1,15 @@
 {
-  "extends": "typescript-template/build.json",
-  "exclude": [
-    "node_modules",
-    "**/*/__tests__",
-    "**/*/*.test.ts",
-    "**/*/*.test-d.ts",
-    "**/*/*.e2e.test.ts",
-    "vitest.config.ts",
-    "vitest.config.e2e.ts"
-  ],
-  "include": ["src"],
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true
-  }
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "lib": ["ES2021", "DOM"],
+    "target": "ES2021",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "outDir": "./dist/esm"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
