plugingen repo_changes

--- a/dag-kit/infra/src/tsconfig.json
+++ b/dag-kit/infra/src/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  // "extends": "typescript-template/base.json",
   "compilerOptions": {
-    "jsx": "preserve"
+    "strict": true,
+    // OR if you don't want full strict mode yet:
+    "strictNullChecks": true
   }
 }
