--- a/dag-kit/infra/package.json
+++ b/dag-kit/infra/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@account-kit/infra",
-  "version": "0.0.1",
+  "name": "@dag-kit/infra",
+  "version": "1.0.0",
   "description": "adapters for @aa-sdk/core for interacting",
   "author": "Abstract Labs",
   "license": "MIT",
@@ -60,12 +60,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alchemyplatform/aa-sdk.git"
+    "url": "git+https://github.com/Ayodeji63/blockdag-sdk.git"  // https://github.com/Ayodeji63/blockdag-sdk
   },
   "bugs": {
-    "url": "https://github.com/alchemyplatform/aa-sdk/issues"
+    "url": "https://github.com/Ayodeji63/blockdag-sdk/issues"
   },
-  "homepage": "https://github.com/alchemyplatform/aa-sdk#readme",
+  "homepage": "https://github.com/Ayodeji63/blockdag-sdk#readme",
   "gitHead": "ee46e8bb857de3b631044fa70714ea706d9e317d",
   "optionalDependencies": {
     "alchemy-sdk": "^3.0.0"
