--- a/dag-kit/infra/package.json
+++ b/dag-kit/infra/package.json
@@ -49,7 +49,8 @@
   "dependencies": {
     "@aa-sdk/core": "^4.77.1",
     "eventemitter3": "^5.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@dag-kit/logging": "^1.0.0"
   },
   "peerDependencies": {
     "viem": "^2.29.2"
@@ -60,7 +61,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ayodeji63/blockdag-sdk.git"  // https://github.com/Ayodeji63/blockdag-sdk
+    "url": "git+https://github.com/Ayodeji63/blockdag-sdk.git"
   },
   "bugs": {
     "url": "https://github.com/Ayodeji63/blockdag-sdk/issues"
