--- a/dag-kit/logging/package.json
+++ b/dag-kit/logging/package.json
@@ -50,12 +50,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alchemyplatform/aa-sdk.git"
+    "url": "git+https://github.com/Ayodeji63/blockdag-sdk.git.git"
   },
   "bugs": {
-    "url": "https://github.com/alchemyplatform/aa-sdk/issues"
+    "url": "https://github.com/Ayodeji63/blockdag-sdk.git/issues"
   },
-  "homepage": "https://github.com/alchemyplatform/aa-sdk#readme",
+  "homepage": "https://github.com/Ayodeji63/blockdag-sdk.git#readme",
   "dependencies": {
     "@segment/analytics-next": "1.74.0",
     "dotenv": "^17.2.3",
