--- a/dag-kit/smart-contracts/tsconfig.json
+++ b/dag-kit/smart-contracts/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "extends": "typescript-template/base.json",
   "compilerOptions": {
-    "paths": {
-      "@account-kit/smart-contracts": ["./src/index.ts"],
-      "@account-kit/smart-contracts/experimental": ["./src/ma-v2/index.ts"],
-      "~test/*": ["../../.vitest/src/*"]
-    }
+    "strict": true,
+    // OR if you don't want full strict mode yet:
+    "strictNullChecks": true
   }
 }
