--- a/dag-kit/kit/package.json
+++ b/dag-kit/kit/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dag-kit/wallet-client",
+  "name": "@dag-kit/kit",
   "version": "1.0.0",
-  "description": "Wallet Client for Abstract Account Kit",
+  "description": "",
   "author": "Abstract",
   "license": "MIT",
   "private": false,
@@ -44,24 +44,13 @@
     "test:e2e": "bun test ./src/**/*.e2e.test.*"
   },
   "dependencies": {
-    "@aa-sdk/core": "^4.77.1",
-    "@account-kit/infra": "^4.77.1",
-    "@account-kit/logging": "^4.77.1",
-    "@account-kit/smart-contracts": "^4.77.1",
-    "@alchemy/wallet-api-types": "0.1.0-alpha.18",
-    "abitype": "^1.2.1",
-    "deep-equal": "^2.2.3",
-    "ox": "^0.6.12"
+    "dotenv": "^16.6.1",
+    "permissionless": "^0.2.0",
+    "viem": "^2.20.0"
   },
   "devDependencies": {
-    "@types/deep-equal": "^1.0.4",
-    "@types/node": "^24.0.11",
-    "bun": "^1.2.18",
-    "bun-types": "^1.2.18",
-    "typebox": "^1.0.0"
-  },
-  "peerDependencies": {
-    "viem": "^2.29.2"
+    "@types/node": "^20.11.10",
+    "tsx": "^3.13.0"
   },
   "publishConfig": {
     "access": "public",
