--- a/dag-kit/kit/package.json
+++ b/dag-kit/kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dag-kit/kit",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "author": "Abstract",
   "license": "MIT",
@@ -25,7 +25,7 @@
   "exports": {
     ".": {
       "types": "./dist/types/exports/index.d.ts",
-      "require": "./dist/esm/exports/index.js",
+      "default": "./dist/esm/exports/index.js",
       "import": "./dist/esm/exports/index.js"
     },
     "./experimental": {
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "prebuild": "tsx ./inject-version.ts",
-    "build": "yarn clean && yarn build:esm && yarn build:types",
+    "build": "pnpm clean && pnpm build:esm && pnpm build:types",
     "build:esm": "tsc --project tsconfig.build.json --outDir ./dist/esm",
     "build:types": "tsc --project tsconfig.build.json --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
     "clean": "rm -rf ./dist",
