--- a/dag-kit/kit/package.json
+++ b/dag-kit/kit/package.json
@@ -44,9 +44,15 @@
     "test:e2e": "bun test ./src/**/*.e2e.test.*"
   },
   "dependencies": {
+    "@dag-kit/signer": "../signer/dag-kit-signer-1.0.0.tgz",
+    "@privy-io/react-auth": "^3.9.1",
+    "@privy-io/wagmi-connector": "^0.1.13",
+    "@turnkey/react-wallet-kit": "^1.7.1",
     "dotenv": "^16.6.1",
-    "permissionless": "^0.2.0",
-    "viem": "^2.20.0"
+    "magic-sdk": "^32.0.0",
+    "permissionless": "^0.3.2",
+    "viem": "2.28.1",
+    "wagmi": "2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.10",
