--- a/dag-kit/kit/tsconfig.json
+++ b/dag-kit/kit/tsconfig.json
@@ -1,16 +1,11 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
-
-    // OR if you don't want full strict mode yet:
-    "strictNullChecks": true,
-    "target": "ES2020",
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM"],
-    "moduleResolution": "node",
-    "outDir": "./dist/esm"
-  },
-  // 3. Ensure node_modules is explicitly excluded
-  "exclude": ["node_modules", "dist"]
+    "strict": false
+  }
 }
