--- a/dag-kit/kit/package.json
+++ b/dag-kit/kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dag-kit/kit",
-  "version": "1.0.3.1",
+  "version": "1.0.3-alpha.1",
   "description": "",
   "author": "Abstract",
   "license": "MIT",
