--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -66,6 +66,9 @@
     "@dag-kit/kit": "file:../kit/dag-kit-kit-1.0.3-alpha.3.tgz",
     "@tanstack/react-query": "^5.28.9",
     "@types/bs58": "^4.0.4",
+    "@types/node": "^25.0.3",
+    "@types/react": "18.3.22",
+    "@types/react-dom": "18.3.5",
     "autoprefixer": "^10.4.20",
     "msw": "^2.4.4",
     "msw-storybook-addon": "^2.0.4",
@@ -95,7 +98,7 @@
     "wagmi": "^2.12.7"
   },
   "resolutions": {
-    "viem": "^2.29.2"
+    "viem": "^2.28.1"
   },
   "publishConfig": {
     "access": "public",
