--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dag-kit/react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React components and hooks for using Smart Wallets",
   "author": "Abstract",
   "license": "MIT",
@@ -54,7 +54,7 @@
   "scripts": {
     "prebuild": "tsx ./inject-version.ts",
     "dev": "storybook dev",
-    "build": "yarn clean && yarn build:css && yarn build:esm && yarn build:types",
+    "build": "pnpm clean && pnpm build:esm && pnpm build:types",
     "build:css": "postcss src/styles/index.css -o dist/styles.css",
     "build:esm": "tsc --project tsconfig.build.json --outDir ./dist/esm",
     "build:types": "tsc --project tsconfig.build.json --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
@@ -63,7 +63,7 @@
     "test:run": "vitest run --passWithNoTests"
   },
   "devDependencies": {
-    "@dag-kit/kit": "file:../kit/dag-kit-kit-1.0.3-alpha.3.tgz",
+    "@dag-kit/kit": "file:../kit/dag-kit-kit-1.0.3-alpha.8.tgz",
     "@tanstack/react-query": "^5.28.9",
     "@types/bs58": "^4.0.4",
     "@types/node": "^25.0.3",
