--- a/dag-kit/signer/package.json
+++ b/dag-kit/signer/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "prebuild": "tsx ./inject-version.ts",
-    "build": "yarn clean && yarn build:esm && yarn build:types",
+    "build": "pnpm clean && pnpm build:esm && pnpm build:types",
     "build:esm": "tsc --project tsconfig.build.json --outDir ./dist/esm",
     "build:types": "tsc --project tsconfig.build.json --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
     "clean": "rm -rf ./dist",
