--- a/dag-kit/kit/package.json
+++ b/dag-kit/kit/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@dag-kit/kit",
-  "version": "1.0.3-alpha.8",
+  "version": "1.0.4-alpha.2",
   "description": "",
   "author": "Abstract",
   "license": "MIT",
   "private": false,
   "type": "module",
-  "main": "./dist/esm/exports/index.js",
-  "module": "./dist/esm/exports/index.js",
-  "types": "./dist/types/exports/index.d.ts",
-  "typings": "./dist/types/exports/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist",
@@ -24,9 +24,9 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/types/exports/index.d.ts",
-      "default": "./dist/esm/exports/index.js",
-      "import": "./dist/esm/exports/index.js"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js",
+      "import": "./dist/index.js"
     },
     "./experimental": {
       "types": "./dist/types/exports/experimental.d.ts",
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "prebuild": "tsx ./inject-version.ts",
-    "build": "pnpm clean && pnpm build:esm && pnpm build:types",
+    "build": "pnpm clean && tsup",
     "build:esm": "tsc --project tsconfig.build.json --outDir ./dist/esm",
     "build:types": "tsc --project tsconfig.build.json --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
     "clean": "rm -rf ./dist",
