--- a/dag-kit/signer/package.json
+++ b/dag-kit/signer/package.json
@@ -1,81 +1,19 @@
 {
-  "name": "@dag-kit/signer",
+  "name": "signer",
   "version": "1.0.0",
-  "description": "Core interfaces and clients for interfacing with the Dag Signer API",
-  "author": "Alchemy",
-  "license": "MIT",
-  "private": false,
-  "type": "module",
-  "main": "./dist/esm/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
-  "typings": "./dist/types/index.d.ts",
-  "sideEffects": false,
-  "files": [
-    "dist",
-    "src/**/*.ts",
-    "!dist/**/*.tsbuildinfo",
-    "!vitest.config.ts",
-    "!.env",
-    "!src/**/*.test.ts",
-    "!src/**/*.test-d.ts",
-    "!src/__tests__/**/*"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "default": "./dist/esm/index.js"
-    },
-    "./package.json": "./package.json"
-  },
+  "main": "index.js",
   "scripts": {
-    "prebuild": "tsx ./inject-version.ts",
-    "build": "pnpm clean && pnpm build:esm && pnpm build:types",
-    "build:esm": "tsc --project tsconfig.build.json --outDir ./dist/esm",
-    "build:types": "tsc --project tsconfig.build.json --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
-    "clean": "rm -rf ./dist",
-    "test": "vitest --passWithNoTests",
-    "test:run": "vitest run --passWithNoTests",
-    "release": "pnpm publish --access public"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@tanstack/react-query": "^5.28.9",
-    "@types/bs58": "^4.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.3",
-    "typescript-template": "*"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@aa-sdk/core": "^4.77.1",
-    "@noble/curves": "^1.9.2",
-    "@noble/hashes": "1.7.1",
-    "@noble/secp256k1": "^2.3.0",
-    "@solana/web3.js": "^1.98.0",
-    "@turnkey/http": "^3.11.0",
-    "@turnkey/iframe-stamper": "^2.5.0",
-    "@turnkey/viem": "^0.13.1",
-    "@turnkey/webauthn-stamper": "^0.4.3",
-    "bs58": "^6.0.0",
-    "jwt-decode": "^4.0.0",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.0-rc.2"
-  },
-  "peerDependencies": {
-    "viem": "^2.29.2"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alchemyplatform/aa-sdk.git"
-  },
-  "bugs": {
-    "url": "https://github.com/alchemyplatform/aa-sdk/issues"
-  },
-  "homepage": "https://github.com/alchemyplatform/aa-sdk#readme",
-  "gitHead": "ee46e8bb857de3b631044fa70714ea706d9e317d"
+    "@turnkey/api-key-stamper": "^0.5.0",
+    "@turnkey/http": "^3.16.0",
+    "@turnkey/iframe-stamper": "^2.9.0",
+    "@turnkey/viem": "^0.14.20",
+    "@turnkey/webauthn-stamper": "^0.6.0"
+  }
 }
