--- a/package.json
+++ b/package.json
@@ -82,13 +82,14 @@
     "prettier": "3.3.3",
     "prool": "^0.0.15",
     "remark-mdx": "^3.1.1",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.5",
     "turbo": "^2.2.3",
     "typedoc": "^0.28.13",
     "typedoc-plugin-frontmatter": "^1.3.0",
     "typedoc-plugin-markdown": "^4.8.1",
     "typedoc-plugin-remark": "^2.0.1",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.3",
     "viem": "^2.29.2",
     "vitest": "^2.1.9",
     "wagmi": "2.12.7",
