--- a/dag-kit/react-rn/package.json
+++ b/dag-kit/react-rn/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dag-kit/react-privy",
-  "version": "1.0.4",
+  "name": "@dag-kit/react",
+  "version": "1.0.0",
   "description": "React components and hooks for using Smart Wallets",
   "author": "Abstract",
   "license": "MIT",
@@ -84,6 +84,11 @@
     "@privy-io/react-auth": "^3.9.1",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/zod-form-adapter": "^0.33.0",
+    "@turnkey/api-key-stamper": "^0.5.0",
+    "@turnkey/http": "^3.16.0",
+    "@turnkey/iframe-stamper": "^2.9.0",
+    "@turnkey/viem": "^0.14.20",
+    "@turnkey/webauthn-stamper": "^0.6.0",
     "@wagmi/connectors": "^5.1.15",
     "bs58": "^6.0.0",
     "react-remove-scroll": "^2.5.10",
