--- a/dag-kit/react-rn/package.json
+++ b/dag-kit/react-rn/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dag-kit/react",
-  "version": "1.0.0",
+  "name": "@dag-kit/react-rn",
+  "version": "1.0.0-beta.4",
   "description": "React components and hooks for using Smart Wallets",
   "author": "Abstract",
   "license": "MIT",
