--- a/dag-kit/backend/package.json
+++ b/dag-kit/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "@turnkey/api-key-stamper": "^0.5.0",
     "@turnkey/http": "^3.16.0",
     "axios": "1.12.0",
@@ -19,7 +20,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
