--- a/dag-kit/kit/package.json
+++ b/dag-kit/kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dag-kit/kit",
-  "version": "1.0.4-alpha.2",
+  "version": "1.0.4-alpha.3",
   "description": "",
   "author": "Abstract",
   "license": "MIT",
@@ -25,8 +25,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
     },
     "./experimental": {
       "types": "./dist/types/exports/experimental.d.ts",
