--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -1,124 +1,85 @@
 {
-  "name": "@dag-kit/react-privy",
-  "version": "1.0.4",
-  "description": "React components and hooks for using Smart Wallets",
-  "author": "Abstract",
-  "license": "MIT",
-  "private": false,
+  "name": "react",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "typings": "./dist/index.d.ts",
-  "sideEffects": false,
-  "files": [
-    "dist",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "!dist/**/*.tsbuildinfo",
-    "!vitest.config.ts",
-    "!.env",
-    "!src/**/*.test.ts",
-    "!src/**/*.test-d.ts",
-    "!src/__tests__/**/*"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "default": "./dist/index.js"
-    },
-    "./styles.css": "./dist/styles.css",
-    "./tailwind": {
-      "types": "./dist/types/tailwind/index.d.ts",
-      "import": "./dist/esm/tailwind/index.js",
-      "default": "./dist/esm/tailwind/index.js"
-    },
-    "./alchemy-account-context": {
-      "types": "./dist/types/AlchemyAccountContext.d.ts",
-      "import": "./dist/esm/AlchemyAccountContext.js",
-      "default": "./dist/esm/AlchemyAccountContext.js"
-    },
-    "./hydrate": {
-      "types": "./dist/types/hydrate.d.ts",
-      "import": "./dist/esm/hydrate.js",
-      "default": "./dist/esm/hydrate.js"
-    },
-    "./hooks": {
-      "types": "./dist/types/hooks/index.d.ts",
-      "import": "./dist/esm/hooks/index.js",
-      "default": "./dist/esm/hooks/index.js"
-    },
-    "./package.json": "./package.json"
-  },
   "scripts": {
-    "prebuild": "tsx ./inject-version.ts",
-    "dev": "tsup -watch",
-    "build": "pnpm clean && tsup",
-    "build:css": "postcss src/styles/index.css -o dist/styles.css",
-    "build:esm": "tsc --project tsconfig.build.json --outDir ./dist/esm",
-    "build:types": "tsc --project tsconfig.build.json --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
-    "clean": "rm -rf ./dist",
-    "test": "vitest --passWithNoTests",
-    "test:run": "vitest run --passWithNoTests"
-  },
-  "devDependencies": {
-    "@dag-kit/kit": "file:../kit/dag-kit-kit-1.0.4-alpha.2.tgz",
-    "@tanstack/react-query": "^5.28.9",
-    "@types/bs58": "^4.0.4",
-    "@types/node": "^25.0.3",
-    "@types/react": "18.3.22",
-    "@types/react-dom": "18.3.5",
-    "autoprefixer": "^10.4.20",
-    "msw": "^2.4.4",
-    "msw-storybook-addon": "^2.0.4",
-    "postcss": "^8.4.45",
-    "postcss-cli": "^11.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^8.5.3",
-    "tailwindcss": "^3.4.3",
-    "typescript-template": "*"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^3.9.1",
-    "@tanstack/react-form": "^0.33.0",
-    "@tanstack/zod-form-adapter": "^0.33.0",
-    "@wagmi/connectors": "^5.1.15",
-    "bs58": "^6.0.0",
-    "react-remove-scroll": "^2.5.10",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.0-rc.2"
+    "@dag-kit/kit": "1.0.4-alpha.3",
+    "@hookform/resolvers": "^3.9.0",
+    "@icons-pack/react-simple-icons": "^9.7.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-oauth/google": "^0.12.1",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@turnkey/crypto": "^2.4.0",
+    "@turnkey/encoding": "^0.5.0",
+    "@turnkey/http": "^3.4.2",
+    "@turnkey/react-wallet-kit": "1.0.0-beta.0",
+    "@turnkey/sdk-browser": "^5.2.1",
+    "@turnkey/sdk-react": "^5.2.1",
+    "@turnkey/sdk-server": "^4.1.1",
+    "@turnkey/viem": "^0.9.7",
+    "@turnkey/wallet-stamper": "^1.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
+    "alchemy-sdk": "^3.4.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.427.0",
+    "next": "14.1.1",
+    "next-themes": "^0.2.1",
+    "react": "^19.2.0",
+    "react-apple-login": "^1.1.6",
+    "react-dom": "^19.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-hook-form": "^7.53.0",
+    "react-jazzicon": "^1.0.4",
+    "react-qr-code": "^2.0.15",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "vaul": "^0.9.4",
+    "viem": "^2.31.1",
+    "zod": "^3.23.4"
   },
-  "peerDependencies": {
-    "@tanstack/react-query": "^5.28.9",
-    "react": ">=18.2.0",
-    "react-dom": ">=18.2.0",
-    "viem": "^2.29.2",
-    "wagmi": "^2.12.7"
-  },
-  "resolutions": {
-    "viem": "^2.28.1"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alchemyplatform/aa-sdk.git"
-  },
-  "bugs": {
-    "url": "https://github.com/alchemyplatform/aa-sdk/issues"
-  },
-  "homepage": "https://github.com/alchemyplatform/aa-sdk#readme",
-  "gitHead": "ee46e8bb857de3b631044fa70714ea706d9e317d",
-  "optionalDependencies": {
-    "alchemy-sdk": "^3.0.0"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@t3-oss/env-core": "^0.11.1",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4",
+    "vite-tsconfig-paths": "^6.0.3"
   }
 }
