--- a/dag-kit/backend/package.json
+++ b/dag-kit/backend/package.json
@@ -14,7 +14,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "@turnkey/api-key-stamper": "^0.5.0",
+    "@turnkey/crypto": "^2.4.0",
+    "@turnkey/encoding": "^0.5.0",
     "@turnkey/http": "^3.16.0",
+    "@turnkey/sdk-server": "^4.1.1",
+    "@turnkey/viem": "^0.14.20",
+    "@turnkey/wallet-stamper": "^1.0.4",
     "axios": "1.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -24,12 +29,18 @@
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
+    "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
