--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -36,6 +36,7 @@
     "@turnkey/wallet-stamper": "^1.0.4",
     "@types/jsonwebtoken": "^9.0.7",
     "alchemy-sdk": "^3.4.1",
+    "axios": "1.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
@@ -50,6 +51,7 @@
     "react-hook-form": "^7.53.0",
     "react-jazzicon": "^1.0.4",
     "react-qr-code": "^2.0.15",
+    "react-router-dom": "^7.11.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
