--- a/dag-kit/backend/package.json
+++ b/dag-kit/backend/package.json
@@ -1,17 +1,19 @@
 {
   "name": "dag-kit-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
-    "start": "node index.ts"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@dag-kit/kit": "1.0.4-alpha.3",
     "@supabase/supabase-js": "^2.89.0",
     "@turnkey/api-key-stamper": "^0.5.0",
     "@turnkey/crypto": "^2.4.0",
@@ -20,13 +22,15 @@
     "@turnkey/sdk-server": "^4.1.1",
     "@turnkey/viem": "^0.14.20",
     "@turnkey/wallet-stamper": "^1.0.4",
+    "alchemy-sdk": "^3.6.5",
     "axios": "1.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "viem": "2.28.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
