--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -50,6 +50,7 @@
     "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.53.0",
     "react-jazzicon": "^1.0.4",
+    "react-native-web": "^0.21.2",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.11.0",
     "sonner": "^1.5.0",
@@ -69,19 +70,21 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.23",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-tsconfig-paths": "^6.0.3"
   }
 }
