--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -28,7 +28,7 @@
     "@turnkey/crypto": "^2.4.0",
     "@turnkey/encoding": "^0.5.0",
     "@turnkey/http": "^3.4.2",
-    "@turnkey/react-wallet-kit": "1.0.0-beta.0",
+    "@turnkey/react-wallet-kit": "1.7.1",
     "@turnkey/sdk-browser": "^5.2.1",
     "@turnkey/sdk-react": "^5.2.1",
     "@turnkey/sdk-server": "^4.1.1",
