--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dag-kit/kit": "1.0.4-alpha.3",
+    "@dag-kit/signer": "file:../signer/dag-kit-signer-1.0.0.tgz",
     "@hookform/resolvers": "^3.9.0",
     "@icons-pack/react-simple-icons": "^9.7.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -25,7 +26,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@turnkey/crypto": "^2.4.0",
+    "@turnkey/crypto": "^2.8.8",
     "@turnkey/encoding": "^0.5.0",
     "@turnkey/http": "^3.4.2",
     "@turnkey/react-wallet-kit": "1.7.1",
