--- a/dag-kit/signer/package.json
+++ b/dag-kit/signer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signer",
+  "name": "@dag-kit/signer",
   "version": "1.0.0",
   "description": "React components and hooks for using Smart Wallets",
   "author": "Abstract",
@@ -65,10 +65,12 @@
   "dependencies": {
     "@dag-kit/kit": "file:../kit/dag-kit-kit-1.0.4-alpha.2.tgz",
     "@turnkey/api-key-stamper": "^0.5.0",
+    "@turnkey/crypto": "^2.8.8",
     "@turnkey/http": "^3.16.0",
     "@turnkey/iframe-stamper": "^2.9.0",
     "@turnkey/viem": "^0.14.20",
     "@turnkey/webauthn-stamper": "^0.6.0",
+    "dotenv": "^17.2.3",
     "viem": "2.28.1"
   },
   "devDependencies": {
