--- a/dag-kit/react/package.json
+++ b/dag-kit/react/package.json
@@ -16,7 +16,7 @@
     "@icons-pack/react-simple-icons": "^9.7.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -57,6 +57,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "truncate": "^3.0.0",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.4",
     "viem": "^2.31.1",
